faet: criando bd + backend

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+node_modules
+# Keep environment variables out of version control
+backend/.env
+
+/generated/prisma
