--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.13.0"
   }
 }
